# VanBusInterpreter

./: CMakeLists.txt  README.md  VanTester_pl_PL.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model1.qmodel
Examples/Example1/: CMakeLists.txt  main.cpp
Examples/Example1/VanBus/: vanbus.cpp
Examples/Example1/VanBus/CarStatistics/: economyinfo.h  oil.cpp  oil.h  vehicleinfo.h
Examples/Example1/VanBus/MultimediaInfo/: steeringcontrol.cpp
Examples/build-Example1-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
Examples/build-Example1-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/.cmake/api/v1/reply/: codemodel-v2-a92f7b59c2c4205d55f5.json  directory-VanBus-Debug-b654cf2b3ebc7c38bf67.json  index-2022-05-05T09-25-21-0666.json  target-Example1-Debug-99f7518ffc5ff5c4f312.json  target-VanBus-Debug-5a9c809cced042c48af6.json  target-VanBus_autogen-Debug-ad14b88ccebf2b23b607.json
Examples/build-Example1-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-93cae9e34476d645a6df.json  cmakeFiles-v1-53f3064506e57d5af850.json  codemodel-v2-9525e0e1438629bb0477.json  index-2022-05-05T09-23-12-0626.json  target-Example1_autogen-Debug-6f1dc0057d08108cf0d0.json  target-Example1_autogen_timestamp_deps-Debug-0811be5a1eed857a458e.json  target-VanBus-Debug-14b813f337ff4601d42e.json  target-VanBus_autogen_timestamp_deps-Debug-b7d253551e742fb0cd48.json
Examples/build-Example1-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/Example1_autogen/: deps
Examples/build-Example1-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/Example1_autogen/GK3U4N46WO/: moc_vanbus.cpp  moc_vanbus.cpp.d
Examples/build-Example1-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/Example1_autogen/N6KRI6RMFD/: moc_vehicleinfo.cpp  moc_vehicleinfo.cpp.d
Examples/build-Example1-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/Example1_autogen/SL2SGJ4TO3/: moc_steeringcontrol.cpp  moc_steeringcontrol.cpp.d
Examples/build-Example1-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/VanBus/: cmake_install.cmake
Examples/build-Example1-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/VanBus/VanBus_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
Examples/build-Example1-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/VanBus/VanBus_autogen/EWIEGA46WW/: moc_vanbus.cpp  moc_vanbus.cpp.d
Examples/build-Example1-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/VanBus/VanBus_autogen/G6PFV3IYZB/: moc_vehicleinfo.cpp  moc_vehicleinfo.cpp.d
Examples/build-Example1-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/VanBus/VanBus_autogen/WNNYIXJ4AE/: moc_steeringcontrol.cpp  moc_steeringcontrol.cpp.d
VanBus/: .gitignore  CMakeLists.txt  vanbus.h  vaninterpreter.cpp  vaninterpreter.h
VanBus/CarStatistics/: acinfo.cpp  acinfo.h  economyinfo.cpp  vehicleinfo.cpp
VanBus/MultimediaInfo/: steeringcontrol.h
